--- a/frontend/src/components/LearnScreen/LearnScreen.scss
+++ b/frontend/src/components/LearnScreen/LearnScreen.scss
@@ -58,16 +58,15 @@
 }
 
 .list-lessons {
-  margin: 20px 10%;
+  margin: 20px 0;
 
   .lesson {
     width: 100%;
-    height: 40px;
     color: #1c1d1f;
     padding: auto;
 
     input {
-      width: 20px;
+      min-width: 20px;
       height: 20px;
       margin-right: 10px;
       margin-left: 1px;
@@ -80,6 +79,7 @@
 
     label {
       margin-top: 2px;
+      text-align: justify;
 
       a {
         text-decoration: none;
@@ -94,9 +94,13 @@
     }
 
     .form-check {
-      padding-top: 10px;
-      padding-bottom: 10px;
-      margin: 24px 0;
+      padding: 10px 4px;
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+    }
+    .bg-from-check {
+      background-color: #eaeaea;
     }
 
     .form-check:hover {
