--- a/frontend/src/components/Header/header.scss
+++ b/frontend/src/components/Header/header.scss
@@ -228,6 +228,7 @@
             margin-top: 20px;
             color: #3498db;
             cursor: pointer;
+            text-decoration: none;
           }
 
           .input-box {
@@ -265,4 +266,3 @@
   font-size: 16px;
   color: black;
 }
-
